Made changes to webpage folder files

--- a/webpage/greek_homepage.html
+++ b/webpage/greek_homepage.html
@@ -17,55 +17,50 @@ and open the template in the editor.
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Μάριος Κωνσταντίνος Κωνσταντάκης</title>
 
 </head>
 
-<body id="main">
-	<header id="header"> 
+<body class="main">
+	<header class="header"> 
         <h1>Μάριος Κωνσταντίνος Κωνσταντάκης</h1>
     </header>
     <nav>
-        <ul id="navlist">
+        <ul class="navlist">
             <li class="nav_item"><a class="active" href="#personal">Προσωπικά Στοιχεία</a></li>
 			<li class="nav_item"><a href="#Interests">Ενδιαφέροντα</a></li>
-            <li class="nav_item"><a href="#Classes">Τωρινά Μαθήματα</a></li>
-			<li class="nav_item"><a href="#Past_Classes">Περασμένα Μαθήματα</a></li>
+            <li class="nav_item"><a href="#Experience">Εργασιακή Εμπειρία</a></li>
+			<li class="nav_item"><a href="#University_Courses">Περασμένα Μαθήματα</a></li>
             <li class="nav_item"><a href="#Contact">Επικοινωνία</a></li>
             <li class="nav_item"><a href="#box_rs_social">Μέσα Κοινωνικής Δικτύωσης</a></li>
         </ul>
     </nav>
-    <aside id="box_rs_media" >
-        <h3 id="media_head">Πολυμέσα</h3>
-        <section id="img">
+    <aside class="box_rs_media" >
+        <h3 class="media_head">Πολυμέσα</h3>
+        <section class="img">
             <h5>Φωτογραφία του Αιγάλεω</h5>
-            <a href="css/images/egaleo.jpg" class="img-thumbnail" target="_blank"><img id="pic" src="css/images/egaleo.jpg" alt="Φωτογραφία του Αιγάλεω"></a>
+            <a href="css/images/egaleo.jpg" class="img-thumbnail" target="_blank"><img class="pic" src="css/images/egaleo.jpg" alt="Φωτογραφία του Αιγάλεω"></a>
         </section>
         <h5>Βίντεο</h5>
-            <video id="video_bar" controls>
+            <video class="video_bar" controls>
                 <source src="media/too metal for gravity.mp4" type="video/mp4">
             </video>
         </section>
-		<section id="audio">
-		<h5>Grudge As Monster-Clay Soil λάιβ στο Intrepid Fox 24/11/19</h5>
-			<a target = "_blank" href = "https://www.youtube.com/watch?v=tx-izpRauzw"></a>
-            <!--audio id="audio_bar" controls>
-                <source src="media/LET THE RAIN WASH AWAY PIANO.mp3" type="audio/mp3">
-            </audio-->
-        </section>
     </aside>
     <div>
-        <h3 id="main_subheader">Προσωπικά Στοιχεία</h3>
+        <h3 class="main_subheader">Προσωπικά Στοιχεία</h3>
         <div>
             <section id="Personal" class="boxed">
                  <h4 class="generic_h"><i>Προσωπικά Στοιχεία</i></h4>
                 <ul class="gen_list">
                     <li>Φύλλο: 'Ανδρας</li>
-                    <li>Ημερομηνία Γεννήσεως: 26/Φεβ/1995</li>
-                    <li>Ηλικία: 24</li>
+                    <li>Ημερομηνία Γεννήσεως: 26/02/1995</li>
+                    <li>Ηλικία: 29</li>
                     <li>Τόπος Γέννησης: Αθήνα Αττικής</li>
                     <li>Τόπος Κατοικίας: Αιγάλεω Αττικής</li>
-                    <li>Επάγγελμα: Φοιτητής</li>
+                    <li>Επάγγελμα: Προγραμματιστής</li>
+					<li>Σπουδές: Επιστήμη Υπολογιστών στο Πανεπιστήμιο Κρήτης</li>
                 </ul>
             </section>
         </div>   
@@ -73,20 +68,21 @@ and open the template in the editor.
         <h4 class="generic_h">Ενδιαφέροντα</h4>
         <ul class="gen_list">
                 <li>Μουσική</li>
-                <li>Τατουάζ</li>
                 <li>Άνιμε</li>
                 <li>Ποδόσφαιρο</li>
 				<li>Μπάσκετ</li>
         </ul>
         </article>		
-	    <article id="Classes" class="boxed">
-        <h4 class="generic_h">Τωρινά Μαθήματα</h4>
+	    <article id="Experience" class="boxed">
+        <h4 class="generic_h">Εργασιακή Εμπειρία</h4>
         <ol class="gen_list">
-			<li>HY335 - Δίκτυα Υπολογιστών</li>
-			<li>HY340 - Compilers</li>       
+			<li>08/07/2024-τώρα: Web Developer @ OnlyNet</li>
+			<li>24/05/2023-17/03/2024: Software Engineer @ Ελληνικό Στρατό</li>
+			<li>13/06/2022-09/12/2022: Application Developer @ Alpha Bank</li>  
+            <li>16/01/2021-15/04/2021: Web Developer @ AboutNet</li>
         </ol>
         </article>
-		<article id="Past_Classes"  class="boxed">
+		<article id="University_Courses"  class="boxed">
             <h4 class="generic_h">Περασμένα Μαθήματα</h4>
             <table id="Past_Classes" border="2">
             <tr>
@@ -176,7 +172,19 @@ and open the template in the editor.
 				 <tr>
                      <td>ΗΥ317-Εφαρμοσμένες Στοχαστικές Διαδικασίες</td>
                      <td> 5</td>
-                 </tr> 
+                 </tr>
+				 <tr>
+                     <td>ΗΥ335-Δίκτυα Υπολογιστών</td>
+                     <td> 5.5</td>
+                 </tr>
+				 <tr>
+                     <td>ΗΥ340-Μεταφραστές</td>
+                     <td> 7.5</td>
+                 </tr>
+				 <tr>
+                     <td>ΗΥ342-Παράλληλος Προγραμματισμός</td>
+                     <td> 9</td>
+                 </tr>				 
 					<tr>
                     <td>ΗΥ359-Διαδικτυακός Προγραμματισμός</td>
                     <td> 5</td>
@@ -198,12 +206,24 @@ and open the template in the editor.
                     <td> 5</td>
                 </tr>
 				<tr>
+                    <td>ΗΥ499-Πτυχιακή Εργασία</td>
+                    <td> 9</td>
+                </tr>
+				<tr>
                     <td>MEM341-Οικονομική Θεωρία I</td>
                     <td> 5</td>
                 </tr>
 				<tr>
                     <td>MEM342-Οικονομική Θεωρία IΙ</td>
                     <td> 5</td>
+                </tr>
+                <tr>
+                    <td><strong>Σύνολο Μαθημάτων</strong></td>
+                    <td><strong>35</strong></td>
+                </tr>
+                <tr>
+                    <td><strong>Βαθμός Πτυχίου</strong></td>
+                    <td><strong>6.12</strong></td>
                 </tr>
             </table>
             </article> 
@@ -213,26 +233,26 @@ and open the template in the editor.
         <table>
 		<tr><td>Σταθερό Τηλέφωνo: 210********</td></tr>
         <tr><td>Κινητό Τηλέφωνο: 69********</td></tr>
-        <tr><td> Ηλεκτρονικά Ταχυδρομεία: <a href = "mailto:csd3219@csd.uoc.gr"> csd3219@csd.uoc.gr </a> &   
-		<a  href = "mailto:gusslipknot1@gmail.com"> gusslipknot1@gmail.com </a> </td></tr>
+        <tr><td> Ηλεκτρονικό Ταχυδρομείο:   
+		<a  href = "mailto:kostaskonstantakis6@gmail.com"> kostaskonstantakis6@gmail.com </a> </td></tr>
         </table>
     </section>
 	<article id="box_rs_social" >
             <h4 class="generic_h">Λογαριασμοί Μέσων Κοινωνικής Δικτύωσης</h4>
-            <a class="social img-rounded" id="fb" href="https://www.facebook.com/kostas.konstantakis.92" target="_blank"></a>
-            <a class="social img-rounded" id="yt" href="https://www.youtube.com/channel/UCjHmbs65N_6H-LSJ0kRhCJw" target="_blank"></a>
+			<a class="social img-rounded" id="github" href="https://github.com/kostaskonstantakis/" target="_blank"></a>
+            <a class="social img-rounded" id="linkedin" href="https://www.linkedin.com/in/kostas-k-8841961a2/" target="_blank"></a>
     </article>
-    <footer id="End"> <style type="text/css">
-    #End{color:red;}	
+    <footer class="End"> <style type="text/css">
+    .End{color:red;}	
     </style>
 	Για να μεταβείτε στην αρχή της σελίδας πατήστε
-       <a id ="jump_top" class="btn btn-default" href="#Top"  class="img-thumbnail" href="css/images/korifi.jpg"><img id="pic" src="css/images/korifi.jpg" alt="images/korifi.jpg"></a>
+       <a id ="jump_top" class="btn btn-default" href="#Top" href="css/images/korifi.jpg"><img class="pic" src="css/images/korifi.jpg" alt="images/korifi.jpg"></a>
     </footer>
 	<footer><style type="text/css">
 	footer{color:blue;}
 	</style>
 	Για μετάφραση στα Αγγλικά πατήστε 
-       <a  class="btn btn-default" href="homepage.html" href="css/images/eng2.jpg" class="img-thumbnail" target="_blank"><img id="pic" src="css/images/eng2.jpg" alt="images/eng2.jpg"></a>
+       <a id="translation"  class="btn btn-default" href="homepage.html" href="css/images/eng2.jpg" target="_blank"><img class="pic" src="css/images/eng2.jpg" alt="images/eng2.jpg"></a>
     </footer>
 </body>
 
