Added browser tab x-icon

--- a/webpage/greek_homepage.html
+++ b/webpage/greek_homepage.html
@@ -19,6 +19,7 @@ and open the template in the editor.
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Μάριος Κωνσταντίνος Κωνσταντάκης</title>
+<link rel="icon" type="image/x-icon" href="css/images/MKK-2.jpg">
 
 </head>
 
@@ -31,7 +32,7 @@ and open the template in the editor.
             <li class="nav_item"><a class="active" href="#personal">Προσωπικά Στοιχεία</a></li>
 			<li class="nav_item"><a href="#Interests">Ενδιαφέροντα</a></li>
             <li class="nav_item"><a href="#Experience">Εργασιακή Εμπειρία</a></li>
-			<li class="nav_item"><a href="#University_Courses">Περασμένα Μαθήματα</a></li>
+			<li class="nav_item"><a href="#University_Courses">Πανεπιστημιακά Μαθήματα</a></li>
             <li class="nav_item"><a href="#Contact">Επικοινωνία</a></li>
             <li class="nav_item"><a href="#box_rs_social">Μέσα Κοινωνικής Δικτύωσης</a></li>
         </ul>
@@ -83,7 +84,7 @@ and open the template in the editor.
         </ol>
         </article>
 		<article id="University_Courses"  class="boxed">
-            <h4 class="generic_h">Περασμένα Μαθήματα</h4>
+            <h4 class="generic_h">Πανεπιστημιακά Μαθήματα</h4>
             <table id="Past_Classes" border="2">
             <tr>
                <th>Μάθημα</th>
