--- a/webpage/homepage.html
+++ b/webpage/homepage.html
@@ -18,7 +18,8 @@ and open the template in the editor.
 <link rel="stylesheet" type="text/css" href="css/css.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title> Marios Konstantinos Konstantakis</title>
+<title>Marios Konstantinos Konstantakis</title>
+<link rel="icon" type="image/x-icon" href="css/images/MKK-2.jpg">
 
 </head>
 
